# misc

GocSDK/: config.ini  gocsdk
fmtx/: .lpd6006.c.swp  Makefile  fmtx.c  fmtx.h  lpd6006.c  lpd6006.h
goc_service/: CMakeLists.txt  serialport
goc_service/function/: CMakeLists.txt  function.cpp  function.hpp
remoter/: Makefile  hudplay_rc.c
remoter_service/: build.gradle  proguard-rules.pro
remoter_service/install/: push_apk.bat  push_so.bat  rm_apk.bat  rm_so.bat
remoter_service/src/androidTest/java/cn/hudplay/remoter/service/: ApplicationTest.java
remoter_service/src/main/: AndroidManifest.xml
remoter_service/src/main/java/cn/hudplay/remoter/service/: RemoterApplication.java  RemoterNative.java  RemoterReceiver.java  RemoterService.java
remoter_service/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  keymap.cpp  keymap.hpp  main.cpp  remoter_service.c  remoter_service.h
remoter_service/src/main/jni/serialport/: Android.mk  CMakeLists.txt  serialport.cpp  serialport.hpp
remoter_service/src/main/keypair/: appKey.jks  cmd.txt
remoter_service/src/main/res/values/: strings.xml
remoter_service/src/test/java/cn/hudplay/remoter/service/: ExampleUnitTest.java
